RESOLVED FIXED130764
Arguments simplification phase should be fine with marking the arguments local itself as an arguments alias
https://bugs.webkit.org/show_bug.cgi?id=130764
Summary Arguments simplification phase should be fine with marking the arguments loca...
Filip Pizlo
Reported 2014-03-25 19:52:53 PDT
Being an arguments alias just means that your OSR exit recovery should attempt arguments creation. This is true of arguments locals. We had special cases that tried to make it not true of arguments locals. The only consequence of those special cases was to cause crashes in case of arguments that are also captured variables (i.e. we have SlowArguments). <rdar://problem/16304788>
Attachments
the patch (3.98 KB, patch)
2014-03-25 19:56 PDT, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2014-03-25 19:56:17 PDT
Created attachment 227824 [details] the patch
Sam Weinig
Comment 2 2014-03-25 21:06:09 PDT
Comment on attachment 227824 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=227824&action=review > Source/JavaScriptCore/ChangeLog:17 > + arguments aliases, and non-captured variables get completely SSAified - i.e. no Setocals Setocals -> SetLocals
Filip Pizlo
Comment 3 2014-03-25 21:09:35 PDT
Note You need to log in before you can comment on or make changes to this bug.